tests/snapshots/snapshot_fixtures__fixtures__stdio_fread_short_read.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/stdio_fread_short_read.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : s8i[16] = zero [cir_private, default, dso_local, constant]
global .str : s8i[33] = "slate_stdio_fread_short_read.tmp" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "w" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[10] = "open-fail" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[10] = "abcdefghi" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = "r" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[12] = "reopen-fail" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[8] = "%zu %s\n" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn fread(%arg0: void*, %arg1: u64i, %arg2: u64i, %arg3: rec__IO_FILE*) -> u64i [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec__IO_FILE*, "f", align 8
    %2 = alloca rec__IO_FILE*, "g", align 8
    %3 = alloca s8i[16], "buf", align 16
    %4 = alloca u64i, "n", align 8
    %5 = const 0 : s32i
    store %5, %0
    %6 = get_global @.str : s8i[33]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = call @remove(%7) : s32i [all]
    %9 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %10 = get_global @.str : s8i[33]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = get_global @.str.1 : s8i[2]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = call @fopen(%11, %13) : rec__IO_FILE* [all]
    store %14, %1, align 8
    scope {
        %56 = load %1 : rec__IO_FILE*, align 8
        %57 = cast(ptr_to_bool) %56 : bool
        %58 = not %57 : bool
        if %58 {
            %59 = get_global @.str.2 : s8i[10]*
            %60 = cast(array_to_ptrdecay) %59 : s8i*
            %61 = call @puts(%60) : s32i [all]
            %62 = const 0 : s32i
            store %62, %0
            %63 = load %0 : s32i
            return %63
        }
        yield
    }
    %15 = get_global @.str.3 : s8i[10]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = load %1 : rec__IO_FILE*, align 8
    %18 = call @fputs(%16, %17) : s32i [all]
    %19 = load %1 : rec__IO_FILE*, align 8
    %20 = call @fclose(%19) : s32i [all]
    %21 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %22 = get_global @.str : s8i[33]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = get_global @.str.4 : s8i[2]*
    %25 = cast(array_to_ptrdecay) %24 : s8i*
    %26 = call @fopen(%23, %25) : rec__IO_FILE* [all]
    store %26, %2, align 8
    scope {
        %48 = load %2 : rec__IO_FILE*, align 8
        %49 = cast(ptr_to_bool) %48 : bool
        %50 = not %49 : bool
        if %50 {
            %51 = get_global @.str.5 : s8i[12]*
            %52 = cast(array_to_ptrdecay) %51 : s8i*
            %53 = call @puts(%52) : s32i [all]
            %54 = const 0 : s32i
            store %54, %0
            %55 = load %0 : s32i
            return %55
        }
        yield
    }
    %27 = get_global @__const.main.buf : s8i[16]*
    copy %3, %27
    %28 = get_global @fread : ((void*, u64i, u64i, rec__IO_FILE*) -> u64i)*
    %29 = cast(array_to_ptrdecay) %3 : s8i*
    %30 = cast(bitcast) %29 : void*
    %31 = const 4 : u64i
    %32 = const 4 : u64i
    %33 = load %2 : rec__IO_FILE*, align 8
    %34 = call @fread(%30, %31, %32, %33) : u64i [all]
    store %34, %4, align 8
    %35 = get_global @printf : ((s8i*, ...) -> s32i)*
    %36 = get_global @.str.6 : s8i[8]*
    %37 = cast(array_to_ptrdecay) %36 : s8i*
    %38 = load %4 : u64i, align 8
    %39 = cast(array_to_ptrdecay) %3 : s8i*
    %40 = call @printf(%37, %38, %39) : s32i [all]
    %41 = load %2 : rec__IO_FILE*, align 8
    %42 = call @fclose(%41) : s32i [all]
    %43 = get_global @.str : s8i[33]*
    %44 = cast(array_to_ptrdecay) %43 : s8i*
    %45 = call @remove(%44) : s32i [all]
    %46 = const 0 : s32i
    store %46, %0
    %47 = load %0 : s32i
    return %47
}
