tests/snapshots/snapshot_fixtures__fixtures__stdio_fread_unsupported_buffer.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/stdio_fread_unsupported_buffer.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[41] = "slate_stdio_fread_unsupported_buffer.tmp" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "w" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[10] = "open-fail" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[11] = "heap-owned" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = "r" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[12] = "reopen-fail" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[8] = "%zu %s\n" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn fread(%arg0: void*, %arg1: u64i, %arg2: u64i, %arg3: rec__IO_FILE*) -> u64i [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn free(%arg0: void*) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec__IO_FILE*, "f", align 8
    %2 = alloca rec__IO_FILE*, "g", align 8
    %3 = alloca s8i*, "buf", align 8
    %4 = alloca u64i, "n", align 8
    %5 = const 0 : s32i
    store %5, %0
    %6 = get_global @.str : s8i[41]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = call @remove(%7) : s32i [all]
    %9 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %10 = get_global @.str : s8i[41]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = get_global @.str.1 : s8i[2]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = call @fopen(%11, %13) : rec__IO_FILE* [all]
    store %14, %1, align 8
    scope {
        %70 = load %1 : rec__IO_FILE*, align 8
        %71 = cast(ptr_to_bool) %70 : bool
        %72 = not %71 : bool
        if %72 {
            %73 = get_global @.str.2 : s8i[10]*
            %74 = cast(array_to_ptrdecay) %73 : s8i*
            %75 = call @puts(%74) : s32i [all]
            %76 = const 0 : s32i
            store %76, %0
            %77 = load %0 : s32i
            return %77
        }
        yield
    }
    %15 = get_global @.str.3 : s8i[11]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = load %1 : rec__IO_FILE*, align 8
    %18 = call @fputs(%16, %17) : s32i [all]
    %19 = load %1 : rec__IO_FILE*, align 8
    %20 = call @fclose(%19) : s32i [all]
    %21 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %22 = get_global @.str : s8i[41]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = get_global @.str.4 : s8i[2]*
    %25 = cast(array_to_ptrdecay) %24 : s8i*
    %26 = call @fopen(%23, %25) : rec__IO_FILE* [all]
    store %26, %2, align 8
    scope {
        %62 = load %2 : rec__IO_FILE*, align 8
        %63 = cast(ptr_to_bool) %62 : bool
        %64 = not %63 : bool
        if %64 {
            %65 = get_global @.str.5 : s8i[12]*
            %66 = cast(array_to_ptrdecay) %65 : s8i*
            %67 = call @puts(%66) : s32i [all]
            %68 = const 0 : s32i
            store %68, %0
            %69 = load %0 : s32i
            return %69
        }
        yield
    }
    %27 = get_global @malloc : ((u64i) -> void*)*
    %28 = const 16 : u64i
    %29 = call @malloc(%28) : void* [all]
    %30 = cast(bitcast) %29 : s8i*
    store %30, %3, align 8
    %31 = const 0 : s8i
    %32 = const 0 : s64i
    %33 = load %3 : s8i*, align 8
    %34 = ptr_stride %33, %32 : s8i*
    store %31, %34, align 1
    %35 = get_global @fread : ((void*, u64i, u64i, rec__IO_FILE*) -> u64i)*
    %36 = load %3 : s8i*, align 8
    %37 = cast(bitcast) %36 : void*
    %38 = const 1 : u64i
    %39 = const 10 : u64i
    %40 = load %2 : rec__IO_FILE*, align 8
    %41 = call @fread(%37, %38, %39, %40) : u64i [all]
    store %41, %4, align 8
    %42 = const 0 : s8i
    %43 = load %4 : u64i, align 8
    %44 = load %3 : s8i*, align 8
    %45 = ptr_stride %44, %43 : s8i*
    store %42, %45, align 1
    %46 = get_global @printf : ((s8i*, ...) -> s32i)*
    %47 = get_global @.str.6 : s8i[8]*
    %48 = cast(array_to_ptrdecay) %47 : s8i*
    %49 = load %4 : u64i, align 8
    %50 = load %3 : s8i*, align 8
    %51 = call @printf(%48, %49, %50) : s32i [all]
    %52 = get_global @free : ((void*) -> void)*
    %53 = load %3 : s8i*, align 8
    %54 = cast(bitcast) %53 : void*
    call @free(%54) [all]
    %55 = load %2 : rec__IO_FILE*, align 8
    %56 = call @fclose(%55) : s32i [all]
    %57 = get_global @.str : s8i[41]*
    %58 = cast(array_to_ptrdecay) %57 : s8i*
    %59 = call @remove(%58) : s32i [all]
    %60 = const 0 : s32i
    store %60, %0
    %61 = load %0 : s32i
    return %61
}
