tests/snapshots/snapshot_fixtures__fixtures__stdio_gets_loop_eof.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/stdio_gets_loop_eof.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[30] = "slate_stdio_gets_loop_eof.tmp" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "w" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[10] = "open-fail" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[6] = "only\n" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = "r" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[12] = "reopen-fail" [cir_private, default, align 1, dso_local, constant]
global stdout : rec__IO_FILE* [external, default, align 8, dso_local]
global .str.6 : s8i[5] = "done" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[11] = "empty-done" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn fgets(%arg0: s8i*, %arg1: s32i, %arg2: rec__IO_FILE*) -> s8i* [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec__IO_FILE*, "f", align 8
    %2 = alloca rec__IO_FILE*, "g", align 8
    %3 = alloca s8i[64], "line", align 16
    %4 = alloca rec__IO_FILE*, "h", align 8
    %5 = alloca rec__IO_FILE*, "e", align 8
    %6 = alloca s8i[64], "empty_line", align 16
    %7 = const 0 : s32i
    store %7, %0
    %8 = get_global @.str : s8i[30]*
    %9 = cast(array_to_ptrdecay) %8 : s8i*
    %10 = call @remove(%9) : s32i [all]
    %11 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %12 = get_global @.str : s8i[30]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = get_global @.str.1 : s8i[2]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = call @fopen(%13, %15) : rec__IO_FILE* [all]
    store %16, %1, align 8
    scope {
        %104 = load %1 : rec__IO_FILE*, align 8
        %105 = cast(ptr_to_bool) %104 : bool
        %106 = not %105 : bool
        if %106 {
            %107 = get_global @.str.2 : s8i[10]*
            %108 = cast(array_to_ptrdecay) %107 : s8i*
            %109 = call @puts(%108) : s32i [all]
            %110 = const 0 : s32i
            store %110, %0
            %111 = load %0 : s32i
            return %111
        }
        yield
    }
    %17 = get_global @.str.3 : s8i[6]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = load %1 : rec__IO_FILE*, align 8
    %20 = call @fputs(%18, %19) : s32i [all]
    %21 = load %1 : rec__IO_FILE*, align 8
    %22 = call @fclose(%21) : s32i [all]
    %23 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %24 = get_global @.str : s8i[30]*
    %25 = cast(array_to_ptrdecay) %24 : s8i*
    %26 = get_global @.str.4 : s8i[2]*
    %27 = cast(array_to_ptrdecay) %26 : s8i*
    %28 = call @fopen(%25, %27) : rec__IO_FILE* [all]
    store %28, %2, align 8
    scope {
        %96 = load %2 : rec__IO_FILE*, align 8
        %97 = cast(ptr_to_bool) %96 : bool
        %98 = not %97 : bool
        if %98 {
            %99 = get_global @.str.5 : s8i[12]*
            %100 = cast(array_to_ptrdecay) %99 : s8i*
            %101 = call @puts(%100) : s32i [all]
            %102 = const 0 : s32i
            store %102, %0
            %103 = load %0 : s32i
            return %103
        }
        yield
    }
    scope {
        while {
            %89 = cast(array_to_ptrdecay) %3 : s8i*
            %90 = const 64 : s32i
            %91 = load %2 : rec__IO_FILE*, align 8
            %92 = call @fgets(%89, %90, %91) : s8i* [all]
            %93 = const #cir.ptr<null> : void*
            %94 = cast(bitcast) %93 : s8i*
            %95 = cmp ne %92, %94 : bool
            condition %95
        } do {
            scope {
                %85 = cast(array_to_ptrdecay) %3 : s8i*
                %86 = get_global @stdout : rec__IO_FILE**
                %87 = load %86 : rec__IO_FILE*, align 8
                %88 = call @fputs(%85, %87) : s32i [all]
                yield
            }
            yield
        }
        yield
    }
    %29 = load %2 : rec__IO_FILE*, align 8
    %30 = call @fclose(%29) : s32i [all]
    %31 = get_global @.str.6 : s8i[5]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = call @puts(%32) : s32i [all]
    %34 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %35 = get_global @.str : s8i[30]*
    %36 = cast(array_to_ptrdecay) %35 : s8i*
    %37 = get_global @.str.1 : s8i[2]*
    %38 = cast(array_to_ptrdecay) %37 : s8i*
    %39 = call @fopen(%36, %38) : rec__IO_FILE* [all]
    store %39, %4, align 8
    scope {
        %77 = load %4 : rec__IO_FILE*, align 8
        %78 = cast(ptr_to_bool) %77 : bool
        %79 = not %78 : bool
        if %79 {
            %80 = get_global @.str.2 : s8i[10]*
            %81 = cast(array_to_ptrdecay) %80 : s8i*
            %82 = call @puts(%81) : s32i [all]
            %83 = const 0 : s32i
            store %83, %0
            %84 = load %0 : s32i
            return %84
        }
        yield
    }
    %40 = load %4 : rec__IO_FILE*, align 8
    %41 = call @fclose(%40) : s32i [all]
    %42 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %43 = get_global @.str : s8i[30]*
    %44 = cast(array_to_ptrdecay) %43 : s8i*
    %45 = get_global @.str.4 : s8i[2]*
    %46 = cast(array_to_ptrdecay) %45 : s8i*
    %47 = call @fopen(%44, %46) : rec__IO_FILE* [all]
    store %47, %5, align 8
    scope {
        %69 = load %5 : rec__IO_FILE*, align 8
        %70 = cast(ptr_to_bool) %69 : bool
        %71 = not %70 : bool
        if %71 {
            %72 = get_global @.str.5 : s8i[12]*
            %73 = cast(array_to_ptrdecay) %72 : s8i*
            %74 = call @puts(%73) : s32i [all]
            %75 = const 0 : s32i
            store %75, %0
            %76 = load %0 : s32i
            return %76
        }
        yield
    }
    scope {
        while {
            %62 = cast(array_to_ptrdecay) %6 : s8i*
            %63 = const 64 : s32i
            %64 = load %5 : rec__IO_FILE*, align 8
            %65 = call @fgets(%62, %63, %64) : s8i* [all]
            %66 = const #cir.ptr<null> : void*
            %67 = cast(bitcast) %66 : s8i*
            %68 = cmp ne %65, %67 : bool
            condition %68
        } do {
            scope {
                %58 = cast(array_to_ptrdecay) %6 : s8i*
                %59 = get_global @stdout : rec__IO_FILE**
                %60 = load %59 : rec__IO_FILE*, align 8
                %61 = call @fputs(%58, %60) : s32i [all]
                yield
            }
            yield
        }
        yield
    }
    %48 = load %5 : rec__IO_FILE*, align 8
    %49 = call @fclose(%48) : s32i [all]
    %50 = get_global @.str.7 : s8i[11]*
    %51 = cast(array_to_ptrdecay) %50 : s8i*
    %52 = call @puts(%51) : s32i [all]
    %53 = get_global @.str : s8i[30]*
    %54 = cast(array_to_ptrdecay) %53 : s8i*
    %55 = call @remove(%54) : s32i [all]
    %56 = const 0 : s32i
    store %56, %0
    %57 = load %0 : s32i
    return %57
}
